5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1708_3069.log
== TEST (2019-04-29 15:46:37) 
-- CODE:
ataque = input("FURIA/GRITO/TOQUE ?").upper()
dado1 = int(input("VALOR SORTEADO: "))
dado2 = int(input("VALOR SORTEADO: "))

s = dado1 + dado2

if (( (1 <= dado1) and ( dado1 <= 8) ) and ( (1 <= dado2) and (dado2 <= 8) ))
	if ( ataque == "FURIA"):
		dt = 10 + ( s )
		print( dt )
	elif ( ataque == "GRITO"):
		dt = 6 + ( s )
		print( dt )
	elif ( ataque == "TOQUE"):
		dt = ( s )**2
		print( dt )
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
		
-- ERROR:
File "XXXX", line 7
    if (( (1 <= dado1) and ( dado1 <= 8) ) and ( (1 <= dado2) and (dado2 <= 8) ))
                                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:46:56) 
-- CODE:
ataque = input("FURIA/GRITO/TOQUE ?").upper()
dado1 = int(input("VALOR SORTEADO: "))
dado2 = int(input("VALOR SORTEADO: "))

s = dado1 + dado2

if (( (1 <= dado1) and ( dado1 <= 8) ) and ( (1 <= dado2) and (dado2 <= 8) )):
	if ( ataque == "FURIA"):
		dt = 10 + ( s )
		print( dt )
	elif ( ataque == "GRITO"):
		dt = 6 + ( s )
		print( dt )
	elif ( ataque == "TOQUE"):
		dt = ( s )**2
		print( dt )
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
		
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:47:17) 
-- CODE:
ataque = input("FURIA/GRITO/TOQUE? ").upper()
dado1 = int(input("VALOR SORTEADO: "))
dado2 = int(input("VALOR SORTEADO: "))

s = dado1 + dado2

if (( (1 <= dado1) and ( dado1 <= 8) ) and ( (1 <= dado2) and (dado2 <= 8) )):
	if ( ataque == "FURIA"):
		dt = 10 + ( s )
		print( dt )
	elif ( ataque == "GRITO"):
		dt = 6 + ( s )
		print( dt )
	elif ( ataque == "TOQUE"):
		dt = ( s )**2
		print( dt )
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
		
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:47:29) 
-- CODE:
ataque = input("FURIA/GRITO/TOQUE? ").upper()
dado1 = int(input("VALOR SORTEADO: "))
dado2 = int(input("VALOR SORTEADO: "))

s = dado1 + dado2

if (( (1 <= dado1) and ( dado1 <= 8) ) and ( (1 <= dado2) and (dado2 <= 8) )):
	if ( ataque == "FURIA"):
		dt = 10 + ( s )
		print( dt )
	elif ( ataque == "GRITO"):
		dt = 6 + ( s )
		print( dt )
	elif ( ataque == "TOQUE"):
		dt = ( s )**2
		print( dt )
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
		
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:47:41) 
-- CODE:
ataque = input("FURIA/GRITO/TOQUE? ").upper()
dado1 = int(input("VALOR SORTEADO: "))
dado2 = int(input("VALOR SORTEADO: "))

s = dado1 + dado2

if (( (1 <= dado1) and ( dado1 <= 8) ) and ( (1 <= dado2) and (dado2 <= 8) )):
	if ( ataque == "FURIA"):
		dt = 10 + ( s )
		print( dt )
	elif ( ataque == "GRITO"):
		dt = 6 + ( s )
		print( dt )
	elif ( ataque == "TOQUE"):
		dt = ( s )**2
		print( dt )
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
		
-- EXECUTION TIME:
0.18675
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
